--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.2",
     "react": "^19.0.0",
